Fix overflowing deco text

--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,9 @@ svg {
   pointer-events: none;
   opacity: 0;
 }
+
+@media only screen and (orientation: portrait){
+	non-portrait {
+		display: none;
+	}
+}
